--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <div> <h1>Down with the state</h1>
         <p>Abandon the left vs. right paradigm and adopt new ideals, where consistency and logic regin supreme.</p>
         </div>
-       <div><img src="./media1/snip.PNG" alt="" height="200px"></div>
+       <div><img src="./libertarian/snip.PNG" alt="" height="200px"></div>
        <div> <h3>But what about the roads?</h3>
         <p>You just don't understand economics, like supply and demand. Don't worry kiddo, where there's a demand there will be a supply, we'll all have our roads.</p>
         </div>
